--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,9 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
+
+API_KEY=7fc62a4d4f38231fa1b3a4cdf0e2a4c6
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
